--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			</p>
 		</div>
 
-		<div class="attribution">
+		<!-- <div class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
 				>Frontend Mentor</a
@@ -99,7 +99,7 @@
 				href="https://github.com/jorgemunozcerda/fm-newbie-interactive-rating-component"
 				>Jorge Omar Muñoz</a
 			>.
-		</div>
+		</div> -->
 	</body>
 </html>
 
