fixed the five being a number instead of text

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<img src="./images/illustration-thank-you.svg" alt="Thank you" />
 			</div>
 			<div class="number-selection" id="number-text-container">
-				<p>You selected <span id="number-text"></span> out of five</p>
+				<p>You selected <span id="number-text"></span> out of 5</p>
 			</div>
 			<h1>Thank you!</h1>
 			<p>
